--- a/nautilus/deployment/desktop.yml
+++ b/nautilus/deployment/desktop.yml
@@ -68,14 +68,14 @@ spec:
         resources:
           limits:
             memory: 32Gi
-            cpu: "5"
+            cpu: "6"
             nvidia.com/gpu: "1"
-            ephemeral-storage: 35Gi
+            ephemeral-storage: 70Gi
           requests:
             memory: 32Gi
-            cpu: "5"
+            cpu: "6"
             nvidia.com/gpu: "1"
-            ephemeral-storage: 35Gi
+            ephemeral-storage: 70Gi
         volumeMounts:
         - mountPath: /dev/shm
           name: dshm
@@ -83,6 +83,10 @@ spec:
           name: cache-vol
         - mountPath: /home/ubuntu/persistent
           name: root-vol
+        - mountPath: /home/ubuntu/asl/data
+          name: asl-data
+        - mountPath: /home/ubuntu/asl/persistent
+          name: asl-perst
       dnsPolicy: None
       dnsConfig:
         nameservers:
@@ -98,6 +102,12 @@ spec:
       - name: root-vol
         persistentVolumeClaim:
           claimName: aria-persistent # Change this to your initials
+      - name: asl-data
+        persistentVolumeClaim:
+          claimName: asl-dataset
+      - name: asl-perst
+        persistentVolumeClaim:
+          claimName: asl-persistent
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
@@ -115,3 +125,9 @@ spec:
                 - NVIDIA-GeForce-RTX-4090
                 - NVIDIA-TITAN-RTX
                 - NVIDIA-RTX-A5000
+                - NVIDIA-A40
+                - NVIDIA-L40
+                - NVIDIA-RTX-A6000
+                - Quadro-RTX-8000
+                - NVIDIA-A100-SXM4-80GB
+                - Tesla-V100-SXM2-32GB
